# phd-paper-model-collection

./: LICENSE  README.md
models/001/: Project.toml  README.md  code.jl
models/002/: Manifest.toml  README.md  code.jl
models/003/: Manifest.toml  README.md  code.jl  model.mps
models/004/: README.md  code.jl
models/005/: README.md  code.jl
models/006/: README.md
models/007/: Manifest.toml  Project.toml  README.md  code.jl  functions.jl
models/007/analyse_results/: .gitignore  analyse_results_ipm.py  analyse_results_simplex.py  pyproject.toml
models/007/create_model/: create_model.py  pyproject.toml
models/008/: README.md  code.jl
models/008/analyse_results/: analyse_results_dual.py  analyse_results_solve.py  pyproject.toml
models/008/v1102/: Manifest.toml
models/008/v1110/: Manifest.toml
models/008/v1122/: Manifest.toml
models/008/v1130/: Manifest.toml
models/008/v192/: Manifest.toml
models/008/v193/: Manifest.toml  Project.toml
models/model005/: code.jl
quotes/: README.md
